fix(core): return local covers by album name
fix(ui): hide search input builtin close button

--- a/renderer/style.pcss
+++ b/renderer/style.pcss
@@ -78,3 +78,6 @@ a.underlined:hover:before {
 *::-webkit-scrollbar-thumb:hover {
   background-color: var(--font-color);
 }
+::-webkit-search-cancel-button {
+  display: none;
+}
